Fix Tabs cross-browser issues: # Edge: tab-indicator lifts up 2px whilst moving, showing whitespace below. Now moved the indicator 2 px down and increased height by 2px. This looks a lot better in Edge, and the same in all other browsers # FF52: tabs would take up several lines instead of being forced into one. Found out that the `width: -moz-max-content;` fixes this.

--- a/src/Tabs/tabs.css
+++ b/src/Tabs/tabs.css
@@ -92,6 +92,7 @@
 
     &__tab-container {
         position: relative;
+        overflow-y: hidden;
 
         &--contained {
             display: flex;
@@ -113,6 +114,15 @@
 
         &--cluster-right {
             justify-content: flex-end;
+        }
+    }
+}
+/* FIREFOX HACK */
+@-moz-document url-prefix() {
+    .d2ui-tabs {
+        &__scroll-area &__tab-container {
+            /* Forces all the tabs to be on one line */
+            width: -moz-max-content;
         }
     }
 }
